# animal_crossing_fangame

./: .gitignore  Cargo.toml  README.md
asset/resource/map/: town.map
src/: main.rs
src/camera/: camera.rs
src/entity/: player.rs
src/physics/: collision.rs  mod.rs  velocity.rs
