[package]
name = "animal_crossing_fangame"
version = "0.1.0"
authors = ["cmhxone <cmhxone@outlook.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.3"
default-feautres = true
features = ["image", "gfx", "ttf"]